--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/bexstech/bexs-front-end-exam#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
