--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --mode development",
+    "back-end-fake": "json-server src/mocks/db.json --watch",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -25,6 +26,7 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.4",
+    "json-server": "^0.16.1",
     "node-sass": "^4.13.1",
     "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.2",
@@ -38,6 +40,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
