--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --mode development",
-    "back-end-fake": "json-server src/mocks/db.json --watch",
-    "build": "webpack --mode production"
+    "start": "node_modules/.bin/webpack-dev-server --open --mode development",
+    "upfake": "node_modules/.bin/json-server src/mocks/db.json --watch",
+    "build": "node_modules/.bin/webpack --mode production",
+    "e2e": "node_modules/.bin/cypress open"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,10 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@testing-library/cypress": "^6.0.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
+    "cypress": "^4.3.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.4",
