--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "## Desafio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/.bin/jest",
     "start": "node_modules/.bin/webpack-dev-server --open --mode development",
     "upfake": "node_modules/.bin/json-server src/mocks/db.json --watch",
     "build": "node_modules/.bin/webpack --mode production",
     "e2e": "node_modules/.bin/cypress open"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "cypress/"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(css|scss)$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -23,15 +31,18 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@testing-library/cypress": "^6.0.0",
+    "babel-jest": "^25.3.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
     "cypress": "^4.3.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.4",
+    "jest": "^25.3.0",
     "json-server": "^0.16.1",
     "node-sass": "^4.13.1",
     "react-svg-loader": "^3.0.3",
+    "react-test-renderer": "^16.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "svg-url-loader": "^5.0.0",
